=== Version 0.7.7
* Enhancements
  * Added generated method to return text for a table
  * Added html method to Element
  * Updated to use the latest selenium-webdriver 2.27.2
  * Updated to use the latest watir-webdriver 0.6.2

=== Version 0.7.6 / 2012-11-28
* Fixes
  * Fixed attach_to_window workes with partial url on Selenium (George Shakhnazaryan)
  * Fixed double click works on Selenium (William Powell)
* Enhancements
  * Added css selector support for all elements when using Selenium (Brendan Mulholland)
  * Added callback to initialize_accessors method during initialization (Theodore Robert Campbell Jr)

=== Version 0.7.5.1 / 2012-10-16
* Fixes
  * Fixed issue when passing symbol to page_url and calling multiple times

=== Version 0.7.5 / 2012-10-14
* Enhancements
  * Enhanced TabeleCell to return nil when there is no corresponding  cell for a referenced column
  * Added css selector support for SelectList and Div
  * Added ability to pass clasname as string to visit_page, on_page, and if_page methods
  * Added params class instance variable to hold hash values that can be used in the page
  * Added ability to insert ERB into page_url string and have it access params

=== Version 0.7.4 / 2012-9-8
* Enhancements
  * Added ability to find text_fields with :css when using Selenium
  * Added selected_values method to SelectList to get values of all selected elements
* Fixes
  * Fixed problem getting value from SelectList when it is in a Frame with Selenium

=== Version 0.7.3 / 2012-8-18
* Enhancements
  * Improved handling of alert and confirm Javascript popups (George Shakhnazaryan)
  * Added hover method to Element.  Browser support is limited.
  * Added method to get the id of an Element
  * Added support for the following new elements
	Video

=== Version 0.7.2 / 2012-8-1
* Enhancements
  * Added ability to find list_item by :text
  * Added support for the following new elements
	Canvas
	Audio
  * Updated to use selenium-webdriver 2.25.0