@@ -1,6 +1,7 @@
 === Version 0.7.7
 * Enhancements
   * Added generated method to return text for a table
+  * Added generated method to return text for an unordered list
   * Added html method to Element
   * Updated to use the latest selenium-webdriver 2.27.2
   * Updated to use the latest watir-webdriver 0.6.2
